docs/pages/versions/v57.0.0/sdk/ui/swift-ui/alert.mdx
---
title: Alert
description: A SwiftUI Alert component for presenting native iOS alert dialogs.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI Alert matches the official SwiftUI [alert API](<https://developer.apple.com/documentation/swiftui/view/alert(_:ispresented:actions:message:)>) and presents a native iOS alert dialog with a title, actions, and an optional message.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/alert/ios-light.webp"
  darkSrc="/static/images/expo-ui/alert/ios-dark.webp"
  alt="Alert asking the user to confirm signing out"
/>

`Alert` is the centered modal counterpart to [`ConfirmationDialog`](confirmationdialog), which renders as an action sheet from the bottom of the screen. Both share the same trigger/actions/message slot model so callers can swap between them by changing the component name.

## Installation

<APIInstallSection />

## Usage

### Basic alert

Use `Alert.Trigger` to define the visible element and `Alert.Actions` to provide the dialog buttons.

<ComponentExample
  title="BasicAlertExample.tsx"
  src="/static/images/expo-ui/examples/alert-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/alert-basic-ios-dark.webp"
  alt="Alert titled Saved with a single OK button, above the Show alert trigger">

```tsx
import { useState } from 'react';
import { Host, Alert, Button } from '@expo/ui/swift-ui';

export default function BasicAlertExample() {
  const [isPresented, setIsPresented] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <Alert
        title="Saved"
        isPresented={isPresented}
        onIsPresentedChange={setIsPresented}>
        <Alert.Trigger>
          <Button
            label="Show alert"
            onPress={() => setIsPresented(true)}
          />
        </Alert.Trigger>
        <Alert.Actions>
          <Button
            label="OK"
            onPress={() => setIsPresented(false)}
          />
        </Alert.Actions>
      </Alert>
    </Host>
  );
}
```

</ComponentExample>

### Cancel and confirm

Combine `role="cancel"` with a confirm button to build a standard yes/no alert.

<ComponentExample
  title="CancelConfirmAlertExample.tsx"
  src="/static/images/expo-ui/examples/alert-cancel-confirm-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/alert-cancel-confirm-ios-dark.webp"
  alt="Alert titled Sign out? with a message and Cancel and Sign out buttons">

```tsx
import { useState } from 'react';
import { Host, Alert, Button, Text } from '@expo/ui/swift-ui';

export default function CancelConfirmAlertExample() {
  const [isPresented, setIsPresented] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <Alert
        title="Sign out?"
        isPresented={isPresented}
        onIsPresentedChange={setIsPresented}>
        <Alert.Trigger>
          <Button
            label="Sign out"
            onPress={() => setIsPresented(true)}
          />
        </Alert.Trigger>
        <Alert.Actions>
          <Button
            label="Sign out"
            onPress={() => console.log('Signed out')}
          />
          <Button label="Cancel" role="cancel" />
        </Alert.Actions>
        <Alert.Message>
          <Text>
            You will need to sign in again to access your account.
          </Text>
        </Alert.Message>
      </Alert>
    </Host>
  );
}
```

</ComponentExample>

### Destructive action

Use `role="destructive"` on a `Button` inside `Alert.Actions` to style it as a destructive action.

<ComponentExample
  title="DestructiveAlertExample.tsx"
  src="/static/images/expo-ui/examples/alert-destructive-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/alert-destructive-ios-dark.webp"
  alt="Alert titled Delete account? with a message, a Cancel button, and a red Delete button">

```tsx
import { useState } from 'react';
import { Host, Alert, Button, Text } from '@expo/ui/swift-ui';

export default function DestructiveAlertExample() {
  const [isPresented, setIsPresented] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <Alert
        title="Delete account?"
        isPresented={isPresented}
        onIsPresentedChange={setIsPresented}>
        <Alert.Trigger>
          <Button
            label="Delete account"
            role="destructive"
            onPress={() => setIsPresented(true)}
          />
        </Alert.Trigger>
        <Alert.Actions>
          <Button
            label="Delete"
            role="destructive"
            onPress={() => {
              console.log('Deleted');
              setIsPresented(false);
            }}
          />
          <Button label="Cancel" role="cancel" />
        </Alert.Actions>
        <Alert.Message>
          <Text>
            This permanently deletes your account and all data. This
            cannot be undone.
          </Text>
        </Alert.Message>
      </Alert>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Alert } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/alert" apiName="Alert" />
